style.css
* {
  box-sizing: border-box;
  list-style: none;
  margin: 0;
  padding: 0;
  text-decoration: none;
}

:root {
  --bg-grey-light: #f4f4f4;
  --color-grey: #333;
  --color-white: #fff;
  --color-blue: #0000ff;
  --color-red: #ff0000;
  --color-orange: #ffa500;
  --color-yellow: #ffff00;
  --color-green: #008000;
}

body {
  background-color: var(--color-grey);
  color: var(--color-white);
  font-family: 'Roboto', sans-serif;
}

.container {
  padding: 2rem;
}

.nav__list {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.nav__item {
  margin: .5rem 0;
  text-align: center;
  text-transform: uppercase;
  width: 30%;
}

.nav__link {
  border: 2px solid var(--color-white);
  border-radius: 5px;
  color: var(--color-white);
  display: block;
  margin: 0 .5rem;
  padding: .5rem;
  width: 75%;
}

.nav__link:hover,
.current {
  background-color: var(--color-white);
  border-radius: 5px;
  color: var(--color-grey);
  transition: all .5s;
}

.nav__link:focus {
  outline: 2px solid var(--color-white);
}

.card {
  border: 2px solid var(--color-white);
  border-radius: 10px;
  margin: 0 auto;
  max-width: 500px;
  width: 60%;
}

.card__image {
  width: 50px;
}

.card__text {
  font-size: 2rem;
  font-weight: 700;
  letter-spacing: 1.5px;
  margin: 1rem 0 2rem 0;
  text-align: center;
}

.btn {
  border-radius: 5px;
  display: flex;
  margin: 0 auto;
  padding: .5rem 1rem;
  text-transform: uppercase;
  transform: all .5s;
}

.btn__answer {
  background-color: var(--color-blue);
  border: 1px solid var(--color-blue);
  color: var(--color-white);
}

.btn:active {
  transform: translateY(5px);
}

.card__item__back {
  display: none;
}

.btn__list {
  align-items: center;
  display: flex;
  justify-content: center;
  width: 100%;
}

.btn--repeat {
  background-color: var(--color-red);
  border: 2px solid var(--color-red);
}

.btn--hard {
  background-color: var(--color-orange);
  border: 2px solid var(--color-orange);
}

.btn--good {
  background-color: var(--color-yellow);
  border: 2px solid var(--color-yellow);
}

.btn--easy {
  background-color: var(--color-green);
  border: 2px solid var(--color-green);
}


@media (min-width: 1000px) {
  .nav__list {
    flex-direction: row;
    justify-content: center;
    padding-top: 2rem;
    margin: 0 auto;
  }

  .nav__item {
    width: 20%;
  }

  .nav__link {
    display: inline-block;
    padding: .5rem 1rem;
  }
}

